--- a/mule-template-project-initial/pom.xml
+++ b/mule-template-project-initial/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>mule-application</packaging>
 
 	<name>mule-template-project</name>
-	<description>This is a sample project template project</description>
+	<description>This is a sample template project</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
