--- a/mule-template-project-1/pom.xml
+++ b/mule-template-project-1/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>mule-application</packaging>
 
 	<name>mule-template-project-1</name>
-	<description>This project is created using templates project </description>
+	<description>This project is created using template project </description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
